# Tarang

./: README.md
controls/Robosub21Software-main/: README.md
controls/Robosub21Software-main/debug_layer/color_calibration/: CMakeLists.txt  package.xml
controls/Robosub21Software-main/debug_layer/color_calibration/src/: color_calibrate.cpp
controls/Robosub21Software-main/debug_layer/colour_calibration_srv/: CMakeLists.txt  package.xml
controls/Robosub21Software-main/master_layer/: CMakeLists.txt  package.xml
controls/Robosub21Software-main/master_layer/src/: local_vision_odom.cpp
controls/Robosub21Software-main/master_layer/srv_build/: CMakeLists.txt  package.xml
controls/Robosub21Software-main/triton_control/launch/: Autotuner.launch
controls/Robosub21Software-main/triton_control/scripts/: Autotuner  PositionControl
controls/Robosub21Software-main/triton_tasks/: CMakeLists.txt  package.xml
controls/Robosub21Software-main/triton_tasks/launch/: perform_gate_task.launch
controls/Robosub21Software-main/triton_tasks/src/: custom_teleop.py  keyboard_teleop.py  perform_gate_task.py  teleop_control.py
controls/Robosub21Software-main/vision_layer/image_undistort/: CMakeLists.txt
controls/Robosub21Software-main/vision_layer/image_undistort/include/image_undistort/: undistorter.h
controls/Robosub21Software-main/vision_layer/vision_commons/: CMakeLists.txt
controls/Robosub21Software-main/vision_layer/vision_commons/helper_nodes/: blue_filter_demo.cpp  image_pub.cpp  image_save.cpp
controls/Robosub21Software-main/vision_layer/vision_commons/src/: contour.cpp  filter.cpp
controls/Robosub21Software-main/vision_layer/vision_fusion/: CMakeLists.txt
controls/Robosub21Software-main/vision_layer/vision_fusion/include/fusion/: laplacianBlend.hpp
controls/Robosub21Software-main/vision_layer/vision_fusion/src/: color_constancy.cpp  laplacianBlend.cpp
controls/Robosub21Software-main/vision_layer/vision_tasks/: CMakeLists.txt  package.xml
controls/Robosub21Software-main/vision_layer/vision_tasks/src/: path_marker.cpp
